--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.5",
     "mongoose-autopopulate": "^0.16.0",
     "reflect-metadata": "^0.1.13",
