--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,10 @@
 #Database Connection
 URI_MONGODB=mongodb://localhost:27017/superflights
+
+# JWT
+JWT_SECRET=JWTMiClaveSecreta@JolieApi
+EXPIRES_IN=12h
+
+# API
+APP_URL=https://superflights.com
+PORT=3000
